# dojo

./: README.md
aaa-ftsh01/: .cproject  .project
aaa-ftsh01/Include/: Authentication.hpp  AuthenticationMock.hpp  Authorization.hpp  IResource.hpp  ReadOnlyResource.hpp
aaa-ftsh01/Source/: Authorization.cpp
aaa-ftsh01/Test_modules/: AuthorizationTestSuit.cpp
aaa-ftsh03/: .cproject  .project
aaa-ftsh03/Include/: Authorization.hpp  AuthorizationUser.hpp  IAccounting.hpp  IAuthentication.hpp
aaa-ftsh03/Source/: Authorization.cpp  AuthorizationUser.cpp
aaa-ftsh03/Test_modules/: AccountingMock.hpp  AuthenticationMock.hpp  MainTest.cpp  ResourceMock.hpp
chat-client/: .cproject  .project
chat-client/Form/: ChatClient.fbp
chat-client/Include/: ChatClient.hpp  IReceiver.hpp  Main.hpp  MyApp.hpp
chat-client/Source/: ChatClient.cpp  Main.cpp  MyApp.cpp
chat-ftsh07/: .cproject  .project
chat-ftsh07/Include/: ChatObserver.hpp  Create.hpp  ICommand.hpp  Invoker.hpp  Nick.hpp  Room.hpp  User.hpp
chat-ftsh07/Source/: ChatObserver.cpp  Create.cpp  Invoker.cpp  Main.cpp  Nick.cpp  User.cpp
chat-ftsh07/Test_modules/: ChatObserverTest.cpp  SessionMock.hpp
chat-ftsh09/: .project
chat-ftsh09/Include/: ChatObserver.hpp  Room.hpp
chat-ftsh09/Source/: ChatObserver.cpp  Room.cpp
chat-server/: .cproject  .project
empty-project/: .cproject  .project
fsm-ftsh03/: .cproject  .project
fsm-gc/: .project
lcd-ftsh03/: .cproject  .project
lcd-ftsh08/: .cproject  .project
nwatch-ftsh0307/: .cproject  .project
nwatch-gui/: .cproject  .gitignore  .project
vs-project/: CMakeLists.txt
vs-project/Test_modules/: test.cpp
vs-project/src/: CMakeLists.txt  example.cpp
vs-project/test/: CMakeLists.txt  TestMain.cpp
vs-windows/: CMakeLists.txt
(+91 files in other folders)
